--- a/templates/tool.html
+++ b/templates/tool.html
@@ -15,13 +15,19 @@
     <div style="text-align: center">
         <div class="tool_div">
             <div>
-                <a href="" onclick="alert('该功能正在开发中，敬请期待！！！')">Noip</a>
+                <a href="" onclick="alert('该功能正在开发中，敬请期待！！！')"> C++
+                    <img style="width: 200px;height: 200px;" src="/static/img/kuding1.png" alt="">
+                </a>
             </div>
             <div>
-                <a href="" onclick="alert('该功能正在开发中，敬请期待！！！')">Python</a>
+                <a href="" onclick="alert('该功能正在开发中，敬请期待！！！')"> Python
+                    <img style="width: 200px;height: 200px;" src="/static/img/kuding1.png" alt="">
+                </a>
             </div>
              <div>
-                 <a target="_blank" href="/static/build/index.html#/project_create">Scratch</a>
+
+                 <a target="_blank" href="/static/build/index.html#/project_create"> Scratch
+                     <img style="width: 200px;height: 200px;" src="/static/img/scrach.png" alt=""></a>
                  {#                 <a href="/build/">Scratch</a>#}
             </div>
         </div>
