--- a/static/css/z_style.css
+++ b/static/css/z_style.css
@@ -1983,6 +1983,8 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 
 .mod-register .getmessage {
+    text-align: center;
+    padding-left: 0px;
     border-radius: 5px;
     background-color: rgb(0, 0, 0);
     color: white;
