--- a/static/css/kuding.css
+++ b/static/css/kuding.css
@@ -126,18 +126,14 @@ ul.sc::-webkit-scrollbar-track { /*滚动条里面轨道*/
 
 /*代码工具页相关*/
 .tool_div{
-    /*position: absolute;*/
-    /*top: 50%;*/
-    /*left: 50%;*/
-    /*transform: translate(-50%,-50%);*/
-    width: 1200px;
+    width: 1280px;
     height: 800px;
     margin-top: 100px;
 }
 .tool_div div{
-    background: transparent;
+    /*background: transparent;*/
     height: 250px;
-    width: 250px;
+    width: 200px;
     display: inline-block;
     margin: 25px;
     border: crimson 2px solid;
