--- a/templates/test.html
+++ b/templates/test.html
@@ -80,6 +80,13 @@
             position: relative;
         }
 
+        body {
+            top: 0;
+            margin: 0 auto;
+            width: 1280px;
+            background-color: white;
+        }
+
     </style>
 {% endblock %}
 
