--- a/templates/class_type.html
+++ b/templates/class_type.html
@@ -655,7 +655,7 @@
                                 <a href="/Teachers_lineup/">师资阵容</a>
                             </li>
                             <li {% if request.path == "/contact/" %}class="active"{% endif %}><a
-                                    href="/contact/">联系我们</a></li>
+                                    href="/contact/">编程一小时</a></li>
                             {#                            <li {% if request.path == "/static/build/index.html" %}class="active"{% endif %}><a#}
                             {#                                    href="/static/build/index.html">Scrach</a></li>#}
                             <li {% if request.path == "/static/build/index.html" %}class="active"{% endif %}><a
