--- a/templates/stu_show.html
+++ b/templates/stu_show.html
@@ -171,11 +171,6 @@
                 <div class="row">
                     <div class="col-xs-12 text-right">
                         <p class="num">电话: 0561-3199633</p>
-                        <!--	<ul class="fh5co-social">
-                                <li><a href="#"><i class="icon-twitter"></i></a></li>
-                                <li><a href="#"><i class="icon-dribbble"></i></a></li>
-                                <li><a href="#"><i class="icon-github"></i></a></li>
-                            </ul>-->
                     </div>
                 </div>
             </div>
@@ -199,7 +194,7 @@
                                 <a href="/Teachers_lineup/">师资阵容</a>
                             </li>
                             <li {% if request.path == "/contact/" %}class="active"{% endif %}><a
-                                    href="/contact/">联系我们</a></li>
+                                    href="/contact/">编程一小时</a></li>
                             {#                            <li {% if request.path == "/static/build/index.html" %}class="active"{% endif %}><a#}
                             {#                                    href="/static/build/index.html">Scrach</a></li>#}
                             <li {% if request.path == "/static/build/index.html" %}class="active"{% endif %}><a
